--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
-<style>
-  h1, p {
-  font-family: "Poiret One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  text-align: justify;
-  }
-  div {width: 60%; margin: auto;}
-</style>
-
-<div>
-  <h1>Детская художественная школа № 1</h1>
-  <p>Выпускная квалификационная работа студента ЕАСИ - Клевакина Дмитрия Сергеевича, направление "Цифровое искусство".</p>
-  <p>Виртуальное пространство воссоздано в "Blender 3D" по реальным помещениям детской художественной школы №1 им. П.П. Чистякова, находящейся в доме доктора Сяно в городе Екатеринбурге.</p>
-  <iframe width="100%" height="640" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71D9V?logo=1&info=1&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=1&alpha=0.60&inst=0"></iframe>
-  <p>В проекте можно осмотреться, скачав его по <a href="https://developer.mozilla.org">ссылке</a>.</p>
-  <p>Приложение открывается только на компьютерах под системой Windows.</p>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      p {
+        font-family: "Poiret One", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        text-align: justify;
+      }
+      h1 {
+        font-family: "Poiret One", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        text-align: center;
+      }
+      div {
+        width: 60%; margin: auto;
+      }
+    </style>
+  </head>
+    
+  <body>
+    <div>
+      <h1>Детская художественная школа № 1</h1>
+      <p>Выпускная квалификационная работа студента ЕАСИ - Клевакина Дмитрия Сергеевича, направление "Цифровое искусство".</p>
+      <p>Виртуальное пространство воссоздано в "Blender 3D" по реальным помещениям детской художественной школы №1 им. П.П. Чистякова, находящейся в доме доктора Сяно в городе Екатеринбурге.</p>
+      <iframe width="100%" height="640" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71D9V?logo=1&info=1&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=1&alpha=0.60&inst=0"></iframe>
+      <p>В проекте можно осмотреться, скачав его по <a href="https://developer.mozilla.org">ссылке</a>.</p>
+      <p>Приложение открывается только на компьютерах под системой Windows.</p>
+    </div>
+  </body>
+</html>
