--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>HTML Elements Reference</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
       .fontik {
@@ -9,7 +10,7 @@
         font-style: normal;
       }
       h1 { text-align: center; }
-      p { text-align: justify; font-size:100%; }
+      p { text-align: justify; font-size: 200%; }
       div { width: 50%; margin: auto; }
     </style>
   </head>
@@ -19,7 +20,7 @@
       <h1 class="fontik">Детская художественная школа № 1</h1>
       <p class="fontik">Выпускная квалификационная работа студента ЕАСИ - Клевакина Дмитрия Сергеевича, направление "Цифровое искусство".</p>
       <p class="fontik">Виртуальное пространство воссоздано в "Blender 3D" по реальным помещениям детской художественной школы №1 им. П.П. Чистякова, находящейся в доме доктора Сяно в городе Екатеринбурге.</p>
-      <iframe width="100%" height="100vh" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71D9V?logo=1&info=1&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=1&alpha=0.60&inst=0"></iframe>
+      <iframe width="100%" height="500vh" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71D9V?logo=1&info=1&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=1&alpha=0.60&inst=0"></iframe>
       <p class="fontik">В проекте можно осмотреться, скачав его по <a href="https://developer.mozilla.org">ссылке</a>.</p>
       <p class="fontik">Приложение открывается только на компьютерах под системой Windows.</p>
     </div>
