--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         font-style: normal;
       }
       h1 { text-align: center; }
-      p { text-align: justify; font-size: 200%; }
+      p { text-align: justify; font-size: 3vw; }
       div { width: 50%; margin: auto; }
     </style>
   </head>
