--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p class="fontik">Выпускная квалификационная работа студента ЕАСИ - Клевакина Дмитрия Сергеевича, направление "Цифровое искусство".</p>
       <p class="fontik">Виртуальное пространство воссоздано в "Blender 3D" по реальным помещениям детской художественной школы №1 им. П.П. Чистякова, находящейся в доме доктора Сяно в городе Екатеринбурге.</p>
       <iframe width="100%" height="500vh" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71D9V?logo=1&info=1&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=1&alpha=0.60&inst=0"></iframe>
-      <p class="fontik">В проекте можно осмотреться, скачав его по <a href="https://developer.mozilla.org">ссылке</a>.</p>
+      <p class="fontik">В проекте можно осмотреться, скачав его по <a href="https://github.com/jaycob24/DHSH1/releases/download/Release/Virtual.School.Space.zip">ссылке</a>.</p>
       <p class="fontik">Приложение открывается только на компьютерах под системой Windows.</p>
     </div>
   </body>
