--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
       @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
       
       body {
+        max-width: 1200px;
+        padding: 0 10%;
+        margin: auto;
         margin-top: 5vh;
         font-family: "Poiret One", sans-serif;
         font-weight: 400;
@@ -21,21 +24,14 @@
         text-align: justify;
         font-size: 3vh;
       }
-      
-      div {
-        width: 50%;
-        margin: auto;
-      }
     </style>
   </head>
   <body>
-    <div>
-      <h1 class="fontik">Детская художественная школа № 1</h1>
-      <p class="fontik">Выпускная квалификационная работа студента ЕАСИ - Клевакина Дмитрия Сергеевича, направление "Цифровое искусство".</p>
-      <p class="fontik">Виртуальное пространство воссоздано в "Blender 3D" по реальным помещениям детской художественной школы №1 им. П.П. Чистякова, находящейся в доме доктора Сяно в городе Екатеринбурге.</p>
-      <iframe width="100%" height="500vh" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71D9V?logo=1&info=1&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=1&alpha=0.60&inst=0"></iframe>
-      <p class="fontik">В проекте можно осмотреться, скачав его по <a href="https://github.com/jaycob24/DHSH1/releases/download/Release/Virtual.School.Space.zip">ссылке</a>.</p>
-      <p class="fontik">Приложение открывается только на компьютерах под системой Windows.</p>
-    </div>
+    <h1 class="fontik">Детская художественная школа № 1</h1>
+    <p class="fontik">Выпускная квалификационная работа студента ЕАСИ - Клевакина Дмитрия Сергеевича, направление "Цифровое искусство".</p>
+    <p class="fontik">Виртуальное пространство воссоздано в "Blender 3D" по реальным помещениям детской художественной школы №1 им. П.П. Чистякова, находящейся в доме доктора Сяно в городе Екатеринбурге.</p>
+    <iframe width="100%" height="500vh" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71D9V?logo=1&info=1&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=1&alpha=0.60&inst=0"></iframe>
+    <p class="fontik">В проекте можно осмотреться, скачав его по <a href="https://github.com/jaycob24/DHSH1/releases/download/Release/Virtual.School.Space.zip">ссылке</a>.</p>
+    <p class="fontik">Приложение открывается только на компьютерах под системой Windows.</p>
   </body>
 </html>
