--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       p {
         text-align: justify;
         font-size: 3vh;
+        line-height: 120%;
       }
 
       @media (max-width: 768px) {
@@ -38,11 +39,11 @@
     </style>
   </head>
   <body>
-    <h1 class="fontik">Детская художественная школа № 1</h1>
-    <p class="fontik">Выпускная квалификационная работа студента ЕАСИ - Клевакина Дмитрия Сергеевича, направление "Цифровое искусство".</p>
-    <p class="fontik">Виртуальное пространство воссоздано в "Blender 3D" по реальным помещениям детской художественной школы №1 им. П.П. Чистякова, находящейся в доме доктора Сяно в городе Екатеринбурге.</p>
-    <iframe frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71D9V?logo=1&info=1&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=1&alpha=0.60&inst=0"></iframe>
-    <p class="fontik">В проекте можно осмотреться, скачав его по <a href="https://github.com/jaycob24/DHSH1/releases/download/Release/Virtual.School.Space.zip">ссылке</a>.</p>
-    <p class="fontik">Приложение открывается только на компьютерах под системой Windows.</p>
+    <h1>Детская художественная школа № 1</h1>
+    <p>Выпускная квалификационная работа студента ЕАСИ - Клевакина Дмитрия Сергеевича, направление "Цифровое искусство".</p>
+    <p>Виртуальное пространство воссоздано в "Blender 3D" по реальным помещениям детской художественной школы №1 им. П.П. Чистякова, находящейся в доме доктора Сяно в городе Екатеринбурге.</p>
+    <iframe frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71D9V?logo=0&info=0&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=0&alpha=0&inst=0"></iframe>
+    <p>В проекте можно осмотреться, скачав его по <a href="https://github.com/jaycob24/DHSH1/releases/download/Release/Virtual.School.Space.zip">ссылке</a>.
+    <br>Приложение открывается только на компьютерах под системой Windows.</p>
   </body>
 </html>
