--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         max-width: 900px;
         padding: 0 10%;
         margin: auto;
-        margin-top: 5vh;
+        margin-top: 7vh;
+        margin-bottom: 7vh;
         font-family: "Roboto", sans-serif;
         font-weight: 200;
         font-style: normal;
@@ -29,7 +30,7 @@
       p {
         text-align: justify;
         font-size: 3vh;
-        line-height: 120%;
+        line-height: 130%;
       }
 
       @media (max-width: 768px) {
@@ -44,6 +45,6 @@
     <p>Виртуальное пространство воссоздано в "Blender 3D" по реальным помещениям детской художественной школы №1 им. П.П. Чистякова, находящейся в доме доктора Сяно в городе Екатеринбурге.</p>
     <iframe frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71D9V?logo=0&info=0&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=0&alpha=0&inst=0"></iframe>
     <p>В проекте можно осмотреться, скачав его по <a href="https://github.com/jaycob24/DHSH1/releases/download/Release/Virtual.School.Space.zip">ссылке</a>.
-    <br>Приложение открывается только на компьютерах под системой Windows.</p>
+    <br><i>Приложение открывается только на компьютерах под системой Windows</i></p>
   </body>
 </html>
