--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
       
       h1 {
         font-weight: 200;
-        text-align: center;
         font-size: 5vh;
       }
       
       p {
         text-align: justify;
-        font-size: 3vh;
-        line-height: 130%;
+        font-size: 2.5vh;
+        line-height: 150%;
       }
 
       @media (max-width: 768px) {
@@ -45,6 +44,6 @@
     <p>Виртуальное пространство воссоздано в "Blender 3D" по реальным помещениям детской художественной школы №1 им. П.П. Чистякова, находящейся в доме доктора Сяно в городе Екатеринбурге.</p>
     <iframe frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71D9V?logo=0&info=0&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=0&alpha=0&inst=0"></iframe>
     <p>В проекте можно осмотреться, скачав его по <a href="https://github.com/jaycob24/DHSH1/releases/download/Release/Virtual.School.Space.zip">ссылке</a>.
-    <br><i>Приложение открывается только на компьютерах под системой Windows</i></p>
+    <br><i font-size="2vh">(Приложение открывается только на компьютерах под системой Windows)</i></p>
   </body>
 </html>
