--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       
       body {
         max-width: 800px;
-        padding: 0 5%;
+        padding: 0 2%;
         margin: auto;
         margin-top: 7vh;
-        margin-bottom: 7vh;
+        margin-bottom: 10vh;
         font-family: "Roboto", sans-serif;
         font-weight: 200;
         font-style: normal;
@@ -34,6 +34,12 @@
       @media (max-width: 768px) {
         iframe {
           height: 80vh;
+        }
+        p {
+          font-size: 2em;
+        }
+        h1 {
+          font-size: 2em;
         }
     </style>
   </head>
