--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
       @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
       
       body {
-        max-width: 800px;
+        max-width: 900px;
         padding: 0 2%;
         margin: auto;
-        margin-top: 7vh;
-        margin-bottom: 10vh;
+        margin-top: 1vw;
+        margin-bottom: 2vw;
         font-family: "Roboto", sans-serif;
         font-weight: 200;
         font-style: normal;
@@ -36,10 +36,10 @@
           height: 80vh;
         }
         p {
-          font-size: 1.5em;
+          font-size: 2em;
         }
         h1 {
-          font-size: 3em;
+          font-size: 4em;
         }
     </style>
   </head>
