--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
       h1 {
         font-weight: 200;
-        font-size: 2em;
+        font-size: clamp(1vw, 2vw, 4vw);
       }
       
       p {
