--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       }
       
       h1 {
-        font-weight: 200;
-        font-size: 2.5em;
+        font-weight: 400;
+        font-size: 2rem;
       }
       
       p {
-        font-size: 1.5em;
+        font-size: 1rem;
         line-height: 150%;
       }
 
