--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       }
       
       h1 {
-        font-weight: 400;
-        font-size: 2rem;
+        font-weight: 600;
+        font-size: clamp(4rem, 10vw + 1rem, 6rem);
       }
       
       p {
-        font-size: 1rem;
+        font-size: 3rem;
         line-height: 150%;
       }
 
@@ -38,7 +38,7 @@
     </style>
   </head>
   <body>
-    <h1>Детская художественная школа № 1</h1>
+    <h1>ДЕТСКАЯ ХУДОЖЕСТВЕННАЯ ШКОЛА №1</h1>
     <p>Выпускная квалификационная работа студента ЕАСИ - Клевакина Дмитрия Сергеевича, направление "Цифровое искусство".</p>
     <p>Виртуальное пространство воссоздано в "Blender 3D" по реальным помещениям детской художественной школы №1 им. П.П. Чистякова, находящейся в доме доктора Сяно в городе Екатеринбурге.</p>
     <iframe frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71D9V?logo=0&info=0&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=0&alpha=0&inst=0"></iframe>
