--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
       h1 {
         font-weight: 600;
-        font-size: clamp(4rem, 10vw + 1rem, 6rem);
+        font-size: 4rem;
       }
       
       p {
@@ -33,7 +33,7 @@
 
       @media (max-width: 768px) {
         iframe {
-          height: 80vh;
+          height: 90vh;
         }
     </style>
   </head>
