--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       
       h1 {
         font-weight: 400;
-        font-size: clamp(2rem, 2.5vw, 4rem);
+        font-size: 2rem;
       }
       
       p {
-        font-size: clamp(1.5rem, 2vw, 3rem);
+        font-size: 1.5rem;
         line-height: 150%;
       }
 
