--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       }
 
       @media (max-width: 768px) {
+        body {background: yellow;}
         iframe {
           height: 150vh;
         }
