--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1>ДЕТСКАЯ ХУДОЖЕСТВЕННАЯ ШКОЛА №1</h1>
     <p>Выпускная квалификационная работа студента ЕАСИ - Клевакина Дмитрия Сергеевича, направление "Цифровое искусство".</p>
     <p>Виртуальное пространство воссоздано в "Blender 3D" по реальным помещениям детской художественной школы №1 им. П.П. Чистякова, находящейся в доме доктора Сяно в городе Екатеринбурге.</p>
-    <iframe width="100%" height="640" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71TBK?logo=1&info=1&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=1&alpha=0.60&inst=0"></iframe>
+    <iframe frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/71TBK?logo=1&info=1&fs=1&vr=0&zoom=1&sd=1&gyro=0&initload=0&thumbs=1&alpha=0.60&inst=0"></iframe>
     <p>В проекте можно осмотреться, скачав его по <a href="https://disk.yandex.ru/d/ssrzHgF0Xidkjw">ссылке</a>.
     <br><i>(Приложение открывается только на компьютерах под системой Windows)</i></p>
   </body>
